@@ -2,6 +2,7 @@ This file shows a history of changes between PrBoom versions since v2.1.0.
 For historical reference, the complete LxDoom changelog follows it.
 
 Changes from v2.4.5 to v2.4.6
+- Stop right after the quit sound stops, instead of waiting three seconds
 - Fixed sound origin for switches. This is compatibility optioned.
   Patch #1533045 by RjY.
 - Fixed "oof" sound when hitting ground while already dead
